--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
   --back_ground_form: rgb(255, 255, 255);
   --button_main: rgb(122, 197, 247);
   --button_main-hover: rgba(144, 208, 250, 0.952);
+  --button_remove: rgb(228, 58, 58);
+  --button_remove-hover: rgba(207, 60, 60, 0.952);
 }
 
 html {
