--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@
 button {
   cursor: pointer;
   background-color: var(--button_main);
-  border: 1.5px solid;
+  border: 2px rgb(54, 54, 54) solid;
 }
 button:hover {
   background-color: var(--button_main-hover);
@@ -37,7 +37,7 @@ button:hover {
   pointer-events: none;
   transform: scaleY(0);
 }
-.addBook:hover, .button_add:hover {
+.addBook:hover, .button_add:hover, .button_remove:hover {
   transform: scale(1.07);
 }
 
@@ -143,10 +143,25 @@ button:hover {
   min-width: max-content;
   min-height: 16em;
   border: 1px solid;
+
+  display: flex;
+  flex-direction: column;
+}
+.book_remove {
+  background-color: rgb(27, 4, 4);
+  transition: background-color linear 0.3s;
 }
 
 .button_remove {
   background-color: var(--button_remove);
+  width: 25%;
+  height: 2em;
+  font-size: 1.2em;
+  color: white;
+
+  align-self: center;
+  margin-top: auto;
+  transition: background-color 0.4s ease;
 }
 .button_remove:hover {
   background-color: var(--button_remove-hover);
