--- a/styles/main.css
+++ b/styles/main.css
@@ -131,6 +131,15 @@ button:hover {
   margin: auto auto 0 auto;
   justify-content: end;
 }
+
+.exists {
+  position: absolute;
+  top: 0.7em;
+  right: 0;
+  width: inherit;
+  background-color: red;
+  color: white;
+}
 .books {
   display: grid;
   justify-content: center;
@@ -169,11 +178,14 @@ button:hover {
   background-color: var(--button_remove-hover);
 }
 
-.book > h3 {
+.inputSection {
+  margin-bottom: 1.5em;
+}
+.inputSection > h3 {
   background-color: rgb(255, 255, 255);
   padding: 0.5em 1em;
   border-bottom: 1px solid;
 }
-.title_3:nth-last-child(1) {
-  margin-bottom: 1.5em;
-}
+
+
+
