--- a/styles/main.css
+++ b/styles/main.css
@@ -199,6 +199,7 @@ label:has(.checkRead) {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
   transition: background-color 0.4s ease;
 }
 label:has(.checkRead):hover {
